GNOME Bugzilla – Bug 772674
List input methods for the user's locale instead of fixed one
Last modified: 2017-01-19 16:03:54 UTC
I have installed a fresh fedora 24 in Chinese (Taiwan) language and found some problems in setup. Problems: 1. gnome-initial-setup only lists "chewing" (ibus-chewing) which is not a default Chinese (Taiwan) input method since fedora 23. 2. the default input method for Chinese (Taiwan) language since fedora 23 is "New Zhuyin" (ibus-libzhuyin). ibus-libzhuyin is installed by default, but not listed in the setup dialogue. Reproducible: always Expect result: 1. gnome-initial-setup list all the available input methods of user's locale which installed on the system. 2. For example, when adding new input sources in System Settings > Language & Regions, gnome can list the available input methods for my locale (which is Chinese (Taiwan)) directly, and so should gnome-initial-steup does. Thanks!
For your information, one of my friend found "chewing" listed in libgnome-desktop/default-input-sources.h , and maybe that's the cause. However, I am not familiar with the programming side, and that's what I all know about this issue.
About the code, maybe need to change it from: { "zh_TW", "ibus", "chewing" }, To: { "zh_TW", "ibus", "libzhuyin" },
Created attachment 343808 [details] [review] default-input-sources: Change default for zh_TW to ibus-libzhuyin https://bugzilla.redhat.com/show_bug.cgi?id=1405946
Review of attachment 343808 [details] [review]: looks good, thanks
Comment on attachment 343808 [details] [review] default-input-sources: Change default for zh_TW to ibus-libzhuyin 370b985..a42a5d0 master -> master